--- a/app/views/user-research-feb-2025/gov-pay.html
+++ b/app/views/user-research-feb-2025/gov-pay.html
@@ -49,7 +49,7 @@ GOV.UK
 							</li>
 						</ul>
 
-						<input id="card-no" type="text" inputmode="numeric" pattern="[0-9]*" name="card-number" maxlength="26" class="govuk-input" value="" />
+						<input id="card-no" type="number" inputmode="numeric" pattern="[0-9]*" name="card-number" maxlength="26" class="govuk-input" value="">
 					</div>
 
 					<div class="govuk-form-group expiry-date" data-validation="expiryMonth">
@@ -63,14 +63,14 @@ GOV.UK
 
 						<div class="govuk-date-input__item govuk-date-input__item--month govuk-date-input__item--with-separator">
 							<label class="govuk-label govuk-date-input__label" for="expiry-month" style="font-size: 19px;">Month</label>
-							<input id="expiry-month" type="text" inputmode="numeric" pattern="[0-9]*" name="expiry-month" value="" class="govuk-input govuk-date-input__input govuk-input--width-3" minlength="1" maxlength="2" autocomplete="cc-exp-month" />
+							<input id="expiry-month" type="text" inputmode="numeric" pattern="[0-9]*" name="expiry-month" value="" class="govuk-input govuk-date-input__input govuk-input--width-3" minlength="1" maxlength="2" autocomplete="" />
 						</div>
 
 						<span class="nhsuk-u-margin-right-3 nhsuk-u-font-weight-bold" style="font-size: 26px;">/</span>
 
 						<div class="govuk-date-input__item govuk-date-input__item--year">
 							<label for="expiry-year" class="govuk-label govuk-date-input__label" style="font-size: 19px;">Year</label>
-							<input id="expiry-year" type="text" inputmode="numeric" pattern="[0-9]*" name="expiry-year" value="" minlength="2" maxlength="4" class="govuk-input govuk-date-input__input govuk-input--width-3" autocomplete="cc-exp-year" data-required />
+							<input id="expiry-year" type="text" inputmode="numeric" pattern="[0-9]*" name="expiry-year" value="" minlength="2" maxlength="4" class="govuk-input govuk-date-input__input govuk-input--width-3" autocomplete="" data-required />
 						</div>
 					</div>
 	
@@ -90,7 +90,7 @@ GOV.UK
 							The last 3 digits on the back of the card
 						</div>
 
-						<input id="cvc" type="text" inputmode="numeric" pattern="[0-9]*" value="" name="cvc" class="govuk-input govuk-input--width-3 cvc" maxlength="3" autocomplete="cc-csc" />
+						<input id="cvc" type="text" inputmode="numeric" pattern="[0-9]*" value="" name="cvc" class="govuk-input govuk-input--width-3 cvc" maxlength="3" autocomplete="" />
 
 						<img src="/images/security-code.png" height="40px" class="generic-cvc-image" alt="The last 3 digits on the back of the card" />
 					</div>
@@ -107,21 +107,21 @@ GOV.UK
 							<label class="govuk-label" for="address-line-1">
 								Address line 1
 							</label>
-							<input class="govuk-input" id="address-line-1" name="addressLine1" type="text" autocomplete="address-line1">
+							<input class="govuk-input" id="address-line-1" name="addressLineOne" type="text" autocomplete="">
 						</div>
 
 						<div class="govuk-form-group">
 							<label class="govuk-label" for="address-line-2">
 								Address line 2 (optional)
 							</label>
-							<input class="govuk-input" id="address-line-2" name="addressLine2" type="text" autocomplete="address-line2">
+							<input class="govuk-input" id="address-line-2" name="addressLineTwo" type="text" autocomplete="">
 						</div>
 
 						<div class="govuk-form-group">
 							<label class="govuk-label" for="address-town">
 								Town or city
 							</label>
-							<input class="govuk-input govuk-!-width-one-half" id="address-town" name="addressTown" type="text" autocomplete="address-level2">
+							<input class="govuk-input govuk-!-width-one-half" id="address-town" name="addressTown" type="text" autocomplete="">
 						</div>
 
 						<div class="govuk-form-group " data-validation="addressCountry">
@@ -131,7 +131,7 @@ GOV.UK
 								</span>
 							</label>
 
-							<select name="addressCountry" class="govuk-select govuk-!-width-two-thirds" id="address-country" autocomplete="billing country-name" style="font-size:19px; height: 40px;">
+							<select name="addressCountry" class="govuk-select govuk-!-width-two-thirds" id="address-country" autocomplete="" style="font-size:19px; height: 40px;">
 								<option value="AF">Afghanistan</option>
 								<option value="AL">Albania</option>
 								<option value="DZ">Algeria</option>
@@ -388,7 +388,7 @@ GOV.UK
 							<label class="govuk-label" for="address-postcode">
 								Postcode
 							</label>
-							<input class="govuk-input govuk-input--width-10" id="address-postcode" name="addressPostcode" type="text" autocomplete="postal-code">
+							<input class="govuk-input govuk-input--width-10" id="address-postcode" name="addressPostcode" type="text" autocomplete="">
 						</div>
 					</fieldset>
 			
@@ -399,19 +399,19 @@ GOV.UK
 					<div id="address-hint" class="govuk-hint govuk-!-margin-bottom-2">We'll send your payment confirmation here</div>
 					
 					<div class="govuk-form-group govuk-!-width-three-quarters" data-validation="addressCity">
-						<label id="address-city-lbl" for="address-city" class="govuk-label">
-							<span class="address-city-label" data-label-replace="addressCity" data-original-label="Town or city" style="font-size:19px;">
+						<label id="address-city-lbl" for="email" class="govuk-label">
+							<span class="address-city-label" data-label-replace="addressCity" data-original-label="Email" style="font-size:19px;">
 								Email
 							</span>
 						</label>
 						
-						<input id="address-city" type="text" name="addressCity" maxlength="100" class="govuk-input govuk-!-width-three-quarters" value="" autocomplete="billing address-level2" />
+						<input id="email" type="text" name="gov-pay-email" maxlength="100" class="govuk-input govuk-!-width-three-quarters" value="" autocomplete="" />
 					</div>
 					
 					<div class="form-group" style="margin-top:20px">
-						<a href="gov-pay-confirm" class="govuk-button nhsuk-u-margin-bottom-6">
+						<button type="submit" class="govuk-button" data-module="govuk-button">
 							Continue
-						</a>
+						</button>
 						
 						<p class="navigation"><a class="cancel" href="gov-pay-cancelled">Cancel payment</a></p>
 					</div>
