--- a/app/views/index.html
+++ b/app/views/index.html
@@ -155,23 +155,33 @@
         </div>
 
         <div class="nhsuk-card">
-        <div class="nhsuk-card__content">
-            <h3 class="nhsuk-card__heading">
-            Penalty Charge Notice Journey PECS
-            </h3>
-            <p class="nhsuk-card__description nhsuk-u-margin-bottom-5">An online service to challenge or pay a PCN.</p>
-            <a class="nhsuk-button" href="v6-pcn/respond-to-your-letter">Latest prototype version</a>
-            <div class="nhsuk-action-link">
-            <a class="nhsuk-action-link__link" href="penalty">
-                <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="36" height="36">
-                <path d="M0 0h24v24H0z" fill="none"></path>
-                <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
-                </svg>
+            <div class="nhsuk-card__content">
+                <h3 class="nhsuk-card__heading">
+                Penalty Charge Notice Journey PECS
+                </h3>
+                <p class="nhsuk-card__description nhsuk-u-margin-bottom-5">An online service to challenge or pay a PCN.</p>
+                <a class="nhsuk-button" href="v6-pcn/respond-to-your-letter">Latest prototype version</a>
                 
-                <span class="nhsuk-action-link__text">PCN Iteration History</span>
-            </a>
+                <div class="nhsuk-action-link">
+                    <a class="nhsuk-action-link__link" href="penalty">
+                        <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="36" height="36">
+                        <path d="M0 0h24v24H0z" fill="none"></path>
+                        <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
+                        </svg>
+                        
+                        <span class="nhsuk-action-link__text">PCN Iteration History</span>
+                    </a>
+                </div>
+
+                <hr>
+
+                <h4>February 2025 UR Journey</h4>
+
+                <p>Journey focusses on a Direct Debit unhappy path, to gain feedback on the "we could not verify" and "we still could not verify" screens, as well as the Direct Debit "done" page with new content.</p>
+                <p>To access these pages, on the "Enter your bank details" screen use the account number <strong>12345679</strong>.</p>
+                <p>This version also implements much more dynamic features and error messaging and could serve as a base for a v7 prototype.</p>
+                <p class="nhsuk-u-margin-bottom-0"><a class="nhsuk-button nhsuk-u-margin-bottom-2" href="user-research-feb-2025/respond-to-your-letter" role="button">Start UR journey</a></p>
             </div>
-        </div>
         </div>
 
         <div class="nhsuk-card">
