--- a/app/views/user-research-feb-2025/direct-debit-check-your-answers.html
+++ b/app/views/user-research-feb-2025/direct-debit-check-your-answers.html
@@ -43,7 +43,7 @@ Check your answers
 					Chosen payment date
 				</dt>
 				<dd class="nhsuk-summary-list__value">
-					{{ data['date'] | default('1') }}
+					{{ data['payment-date'] | default('1') }}
 				</dd>
 
 				<dd class="nhsuk-summary-list__actions">
@@ -74,7 +74,7 @@ Check your answers
 					First payment taken on or just after
 				</dt>
 				<dd class="nhsuk-summary-list__value">
-					01 April 2023
+					{{ data['payment-date'] | default('01') }} April 2023
 				</dd>
 			</div>
       
