Updating to "Split amount over several payments".

--- a/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-ALT.html
+++ b/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-ALT.html
@@ -36,7 +36,7 @@
                     </li>
 
                     <li class="nhsuk-tabs__list-item">
-                        <a class="nhsuk-tabs__tab" href="#split-payment-over-several-payments">Split payment over several payments</a>
+                        <a class="nhsuk-tabs__tab" href="#split-amount-over-several-payments">Split amount over several payments</a>
                     </li>
 
                 </ul>
@@ -75,9 +75,9 @@
 
                 </div>
 
-                <div class="nhsuk-tabs__panel nhsuk-tabs__panel--hidden" id="split-payment-over-several-payments">
+                <div class="nhsuk-tabs__panel nhsuk-tabs__panel--hidden" id="split-amount-over-several-payments">
 
-                    <!-- CONTENT FOR SPLIT PAYMENT OVER SEVERAL PAYMENTS -->
+                    <!-- CONTENT FOR SPLIT AMOUNT OVER SEVERAL PAYMENTS -->
                 
                     <p>If you want spread the cost of your PCN over several payments, you can make regular partial payments using this service.</p>
                     <p>You'll need to make the first payment within 28 days (by {{ 28 | alterTodaysDateByNumberOfDays }}) and make regular monthly payments until you have paid the PCN in full.</p>
